chore(guest): fully integrate xbot guest feature to my current backend
